<resources>
    <string name="app_name" translatable="false">Clover</string>
    <string name="sharedprefs" translatable="false">shared_prefs</string>
    <string name="nombre">Treatment name</string>
    <string name="lunes">Monday</string>
    <string name="martes">Tuesday</string>
    <string name="miercoles">Wednesday</string>
    <string name="jueves">Thursday</string>
    <string name="viernes">Friday</string>
    <string name="sabado">Saturday</string>
    <string name="domingo">Sunday</string>
    <string name="frecuencia">Frequency</string>
    <string name="fecha_de_inicio">Start date</string>
    <string name="cada_dia">Every day</string>
    <string name="dias_especificos">Specific days</string>
    <string name="eliminar">Delete</string>
    <string name="atras">Back</string>
    <string name="continuar">Continue</string>
    <string name="tutorial_entendido">Got it!</string>
    <string name="tutorial_end">And that\'s everything you need to know! Why don\'t you add your first treatment? I\'m sure you\'ll do great!</string>
    <string name="tutorial_anadir_desc">When you want to ask me to remember a treatment, press this button. Look, I\'m going to press it for you!</string>
    <string name="empty_times">For every time of the day you have to take this treatment, touch the + button and set a time.</string>
    <string name="tutorial_subt_insertar">Here you have to tell me what you want me to call the treatment. If it is a very complicated name and you do not remember how to spell it, press the button on the right to show me a picture of the medicine box.</string>
    <string name="tutorial_consultar_desc">Here will appear the treatments that you have told me to remember. If you have finished with any of them, you can delete them from here.</string>
    <string name="tutorial_title_insertar">Adding a name</string>
    <string name="tutorial_anadir">Adding a treatment</string>
    <string name="tutorial_consultar_trat">Checking treatments</string>
    <string name="tutorial_siguiente">Next</string>
    <string name="tutorial_title_blister">Defining the capacity of the package</string>
    <string name="tutorial_subtitle_blister">How many items are in your medicine packet? 10 tablets? 25 sachets? Maybe it\'s a 200mL syrup? Whatever it is, write it down without fear!</string>
    <string name="tutorial_title_dosis">What\'s the size of your dosage?</string>
    <string name="tutorial_subtitle_dosis">Here you have to tell me how many units a dose of your treatment consists of. Maybe it\'s just one pill, a 25mg scoop? I\'m all ears!</string>
    <string name="tutorial_title_fecha">Specifying a start date</string>
    <string name="tutorial_subtitle_fecha">Whether you start the treatment today, in a month or even next year, let me know so I can put it in my diary!</string>
    <string name="tutorial_title_freq">Specify frequency</string>
    <string name="tutorial_subtitle_freq">How often do you have your dose? I know the possibilities are endless, but I have them all in mind.</string>
    <string name="tutorial_title_dias">Select specific days</string>
    <string name="tutorial_subtitle_dias">If you don\'t want to be notified every day, just tell me the days I need to remember to notify you and I promise I won\'t miss a single one! If you feel like it, try playing one of the days now to familiarise yourself with the menu.</string>
    <string name="tutorial_title_interval">Select a custom interval</string>
    <string name="tutorial_subtitle_interval">I get it, I\'m a pain and you don\'t want me to remind you of things all the time. Here you can tell me how many days, weeks or months you want to be reminded - I\'m not mad, really! </string>
    <string name="tutorial_title_hours">Continue to specify times</string>
    <string name="tutorial_subtitle_hours">Whether it\'s 6 a.m., 10 a.m. or even 7.41 p.m., you\'ll never catch me asleep. Tell me what time to tell you and I won\'t be late for a single day!</string>
    <string name="editar">Edit</string>
    <string name="omitir">Skip</string>
    <string name="reponer">Restock</string>
    <string name="tomar">Take</string>
    <string name="prompt_name">What\'s your name?</string>
    <string name="guardado_exito">Treatment saved successfully!</string>
    <string name="tamano_blister">Package capacity</string>
    <string name="tamano_dosis">Intake quantity</string>
    <string name="intervalo_personalizado">Custom interval</string>
    <string name="encontrar_farmacias_cercanas">Nearest pharmacies</string>
    <string name="error_reconocimiento">No name recognized</string>
    <string name="pick_image_camera">Take a picture</string>
    <string name="pick_image_gallery">Choose from gallery</string>
    <string name="confirmar">Confirm</string>
    <string name="reponer_long">Restock treatment</string>
    <string name="ran_out">You\'ve run out of %1$s!</string>
    <string name="nearly_ran_out">%1$s is about to run out!</string>
    <string name="not_ran_out">You\'ve run out of %1$s!</string>
    <string name="not_nearly_ran_out">%1$s is about to run out!</string>
    <string name="header_add">Treatment info</string>
    <string name="empty_treatment_list">Once you start adding treatments, they\'ll appear here.</string>
    <string name="add">Add</string>
    <string name="head_time">Add times</string>
    <string name="buscar_farmacia">Do you want to find nearby pharmacies?</string>
    <string name="buscar">Find</string>
    <string name="seguro">Are you sure?</string>
    <string name="not_cta">Touch to restock it or to find a nearby pharmacy.</string>
    <string name="not_sync_sucess">Treatment data is up to date!</string>
    <string name="not_sync_desc">If you stop seeing this notification, restart the app immediately.</string>
    <string name="header_edit">Edit treatment</string>
    <string name="remaining">%1$s intakes remaining.</string>
    <plurals name="qty">
        <item name="quantity" quantity="one">%1$d unit.</item>
        <item name="quantity" quantity="other">%1$d units.</item>
    </plurals>
    <plurals name="blister_qty">
        <item name="quantity" quantity="one"><![CDATA[<b>Pack</b><br> %1$d unit.]]></item>
        <item name="quantity" quantity="other"><![CDATA[<b>Pack</b><br> %1$d units.]]></item>
    </plurals>
    <plurals name="intake_qty">
        <item name="quantity" quantity="one"><![CDATA[<b>Intake</b><br> %1$d unit.]]></item>
        <item name="quantity" quantity="other"><![CDATA[<b>Intake</b><br> %1$d units.]]></item>
    </plurals>
    <string name="call_permission">It seems you haven\'t given me permission to use your phone. So that you can call the pharmacies near you, can you please give it to me?</string>
    <string name="cada">"Every "</string>
    <string name="dia">"day at "</string>
    <string name="dias">" days at "</string>
    <string name="semanas">" weeks at "</string>
    <string name="a_las">" at "</string>
    <string name="semana">" week at "</string>
    <string name="dia_espacio">" day at"</string>
    <string name="not_take">It\'s time!</string>
    <plurals name="not_desc">
        <item quantity="one">Take %1$d unit of %2$s!</item>
        <item quantity="other">Take %1$d units of %2$s!</item>
    </plurals>
    <string name="lbl_take_camera_picture">Take picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="crop">Edit picture</string>
    <string name="onboard_1">Oh, hi! I\'ve never seen you before! How are you?</string>
    <string name="onboard_2">Nice to meet you, I\'m Clover. I know you don\'t know me very well, but don\'t worry: I\'ll keep everything up to date for you!</string>
    <string name="onboard_3">Seriously, I\'m very tidy, I don\'t miss a thing! But, before I forget, could you tell me your name?</string>
    <string name="onboard_4">"Wonderful, "</string>
    <string name="onboard_5">! Now that we know each other, I\'m going to show you a bit of this! Follow me!</string>
    <string name="dawn_1">Good morning! What a nice day today! Do you have any plans?</string>
    <string name="dawn_2">Hello again! I love this time of the day, don\'t you? The sky looks so beautiful…</string>
    <string name="dawn_3">Good morning! What\'s there for breakfast?</string>
    <string name="dawn_4">I\'ve been seeing a lot of you around here lately - I\'m so glad you\'re so consistent!</string>
    <string name="dawn_5">What, you thought I was sleeping while you were gone? I never sleep!</string>
    <string name="noon_1">Hi! What a nice day today! Do you have any plans?</string>
    <string name="noon_2">Howdy! Today I read that the oldest legal medicine in the world is Aspirin - it has been marketed for over 150 years!</string>
    <string name="noon_3">How\'s the day going? While you were gone I did 1000 push-ups! Remembering everything requires extreme preparation!</string>
    <string name="noon_4">Don\'t forget that I can look up nearby pharmacies for you in case a treatment is about to run out!</string>
    <string name="noon_5">There are medicines with endless names. If you get stuck on one, show me a picture and I\'ll try to write it down for you!</string>
    <string name="dusk_1">Hello again! I love this time of the day, don\'t you? The sky looks so beautiful…</string>
    <string name="dusk_2">\"The whisper of the dusk is night shedding its husk.\", how beautiful! Do you know any similar saying?</string>
    <string name="dusk_3">Have you seen the sky? It turns red like this because it reflects the sunlight at sunset!</string>
    <string name="dusk_4">Sometimes I think about what time the great artists chose to create their most beautiful pieces, and I\'m sure that this is it!</string>
    <string name="dusk_5">My creator says that watching the sunset over the sea is one of the most beautiful things there is, but whenever he goes to see it, he always has me in his pocket!</string>
    <string name="night_1">Good evening! Have you had dinner yet?</string>
    <string name="night_2">Hoo, hoo… owls wake up at this time. Did you know that species with similar eye colours hunt around the same time?</string>
    <string name="night_3">Can you imagine if 18 out of 24 hours of the day were spent at night? That\'s what happens in the Nordic countries in December! Did you know that?</string>
    <string name="night_4">Sleep is such a luxury, which I can\'t afford… just don\'t forget to charge your phone\'s battery!</string>
    <string name="night_5">Good night! Did you know that humans spend 25 years sleeping - that\'s a lot!</string>
    <string name="back">Back</string>
    <string name="open_settings">Settings</string>
    <string name="permissions_needed">Permissions needed</string>
    <string name="camera_permission">It seems you haven\'t given me permission to use your camera. So that I can read the name of your medicines, can you please give it to me?</string>
    <string name="location_permission">It seems you haven\'t given me permission to use your location. So that I can search for pharmacies near you, can you please give it to me?</string>
    <string name="autostart_permission">In order to keep your reminders up to date after a reboot, could you please allow me to start automatically? After clicking on Settings, go to Apps > App launch. Then look for Clover in the list, uncheck the blue toggle and press OK.</string>
    <string name="call_now">CALL NOW</string>
    <string name="before_calling">Before you call, write down the name of the medicine and its capacity so that you don\'t forget it.</string>
    <string name="directions">Directions</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="frequency"><![CDATA[<b>Frequency</b><br> %1$s]]></string>
    <string name="next_intake"><![CDATA[<b>Next intake</b><br> %1$s]]></string>
</resources>