<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dosis_alert_dialog_bg"
    android:orientation="vertical">
    <TextView
        android:id="@+id/alert_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingHorizontal="16dp"
        android:elevation="8dp"
        android:paddingVertical="16dp"
        android:text="@string/buscar_farmacia"
        android:textColor="@color/colorText"
        android:fontFamily="@font/poppins_bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_buscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/btnText"
            android:paddingVertical="@dimen/btn_padding"
            android:textStyle="bold"
            android:background="@drawable/rounded_ok_button_left_both"
            android:text="@string/buscar"
            android:textAllCaps="true"
            android:textColor="#FFF"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_later"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/btnText"
            android:textStyle="bold"
            android:paddingVertical="@dimen/btn_padding"
            android:background="@drawable/rounded_cancel_button_right_both"
            android:text="@string/omitir"
            android:textAllCaps="true"
            android:textColor="#FFF"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>