<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dosis_alert_dialog_bg"
    android:orientation="vertical">
    <TextView
        android:id="@+id/alert_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingHorizontal="16dp"
        android:elevation="8dp"
        android:paddingVertical="16dp"
        android:text="@string/permissions_needed"
        android:textColor="@color/colorText"
        android:fontFamily="@font/poppins_bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/permission_req"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/colorText"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_ok_button_left_both"
            android:textColor="#FFF"
            android:paddingVertical="@dimen/btn_padding"
            android:text="@string/open_settings"
            android:textSize="@dimen/btnText"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/btnDismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_cancel_button_right_both"
            android:textColor="#FFF"
            android:text="@string/back"
            android:paddingVertical="@dimen/btn_padding"
            android:textAllCaps="true"
            android:textSize="@dimen/btnText"
            android:textStyle="bold"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
    </LinearLayout>
</LinearLayout>