<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dosis_alert_dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/before_calling"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/nombre_tratamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/colorText"
            android:textSize="36sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/cantidad_tratamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:textStyle="bold|italic" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/call"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_ok_button_left_both"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_call_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:textSize="@dimen/btnText"
                android:gravity="center_vertical"
                android:text="@string/call_now"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </LinearLayout>
        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_cancel_button_right_both"
            android:textColor="#FFF"
            android:text="@string/back"
            android:textAllCaps="true"
            android:textSize="@dimen/btnText"
            android:textStyle="bold"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
    </LinearLayout>
</LinearLayout>