<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/set_time_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bg_color"
    tools:context=".ui.SetTimeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_offset"
        android:background="?attr/toolbar"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/set_time_rel"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/toolbar_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/head_time"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_horas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="4dp"
        android:padding="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/set_times_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <!--<com.github.matteobattilana.weather.WeatherView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/empty_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/rounded_textview"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:paddingVertical="18dp"
        android:text="@string/empty_times"
        android:textColor="@color/colorText"
        android:textSize="@dimen/emptyTreatments"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/set_times_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <Button
        android:id="@+id/add_time"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button"
        android:text="+"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/btnText"
        app:layout_constraintBottom_toTopOf="@id/set_times_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/set_times_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_ok_button"
        android:paddingVertical="@dimen/btn_padding"
        android:text="@string/confirmar"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/btnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>