<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/pharmaLayout"
    android:background="?attr/bg_color"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PharmaActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_offset"
        app:contentInsetStart="0dp"
        android:background="?attr/toolbar"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:id="@+id/pharma_relative"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/toolbar_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/encontrar_farmacias_cercanas"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/pharma_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.cardview.widget.CardView
            android:id="@+id/pharma_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:elevation="0dp"
            app:cardCornerRadius="16dp">

            <com.huawei.hms.maps.MapView
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                map:cameraTargetLat="51"
                map:cameraTargetLng="10"
                map:cameraZoom="8.5"
                map:mapType="normal"
                map:uiCompass="true"
                map:uiZoomControls="false" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">
        <RelativeLayout
            android:id="@+id/site_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_cardview"
            android:padding="16dp">
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/colorText"
                android:fontFamily="@font/poppins_bold" />
            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:layout_below="@+id/name" />

            <LinearLayout
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address"
                android:layout_alignParentStart="true"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_call_button"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/call_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_call_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/call_string"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/call_now"
                    android:textAllCaps="true"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/directions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_map_button"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/directions_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_directions_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/dir_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/directions"
                    android:textAllCaps="true"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>